--- a/templates/distributor-dep.yaml
+++ b/templates/distributor-dep.yaml
@@ -37,6 +37,7 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         args:
+        - -target=distributor
         - -log.level=debug
         - -server.http-listen-port=80
         - -consul.hostname={{ template "fullname" . }}-consul.{{ .Release.Namespace }}.svc.cluster.local:8500
