--- a/templates/query-frontend-dep.yaml
+++ b/templates/query-frontend-dep.yaml
@@ -29,6 +29,7 @@ spec:
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         args:
+        - -target=query-frontend
         - -log.level=debug
         - -server.http-listen-port=80
         - -server.grpc-listen-port=9095
