Fix Deployment API Version

--- a/templates/nginx-depl.yaml
+++ b/templates/nginx-depl.yaml
@@ -1,6 +1,6 @@
 ---
 {{- if .Values.nginx.enabled -}}
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "fullname" . }}-nginx
@@ -12,6 +12,10 @@ metadata:
     cortex: nginx
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: nginx
+      cortex: nginx
   template:
     metadata:
       labels:
